fix side bar font-size gap css

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,7 +18,7 @@
 }
 
 .bg {
-    margin: 1px 0 2px 2px;
+    margin: 0px 0 2px 2px;
     padding: 13px 0px 12px 15px;
     border: solid 1px #1d2939;
     background-color: #181c27;
