--- a/src/components/text/Text.css
+++ b/src/components/text/Text.css
@@ -16,6 +16,16 @@
     letter-spacing: -0.26px;
 }
 
+.side-bar-content-title {
+    font-size: 13px;
+    line-height: 13px;
+    color: #53b1fd;
+    font-weight: 500;
+    padding: 0px;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
 .common-body {
     font-size: 12px;
     line-height: 20px;
@@ -36,4 +46,11 @@
     font-size: 14px;
     line-height: 18.2px;
     font-weight: 500;
+}
+
+.help-content {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: normal;
+    opacity: 0.9;
 }
